feat(VList): add prependSpacer prop

--- a/packages/vuetify/src/components/VList/VListItem.sass
+++ b/packages/vuetify/src/components/VList/VListItem.sass
@@ -78,7 +78,7 @@
     > .v-icon,
     > .v-tooltip
       ~ .v-list-item__spacer
-        width: $list-item-icon-margin-start
+        width: var(--v-list-prepend-spacer-width, $list-item-icon-margin-start)
 
     > .v-avatar ~ .v-list-item__spacer
       width: $list-item-avatar-margin-start
