chore: add slimWidth to append

--- a/packages/vuetify/src/components/VList/VListItem.sass
+++ b/packages/vuetify/src/components/VList/VListItem.sass
@@ -129,7 +129,7 @@
       > .v-icon,
       > .v-tooltip
         ~ .v-list-item__spacer
-          width: $list-item-slim-spacer-width
+          width: var(--v-list-slim-spacer-width, $list-item-slim-spacer-width)
 
       > .v-avatar ~ .v-list-item__spacer
         width: $list-item-slim-avatar-spacer-width
