chore: change css modifiers to kebab case

--- a/packages/vuetify/src/components/VList/VListItem.sass
+++ b/packages/vuetify/src/components/VList/VListItem.sass
@@ -313,7 +313,7 @@
     &--fluid
       --list-indent-size: 0px
 
-    &--hasPrependIcon
+    &--has-prepend-icon
       --parent-padding: calc(var(--indent-padding) + var(--prepend-width))
 
   .v-list-group__items
